--- a/Relatorio_2/LabsisWebPage/modelo/Pages/page_4.html
+++ b/Relatorio_2/LabsisWebPage/modelo/Pages/page_4.html
@@ -6,9 +6,76 @@
 </head>
 <body>
   <h1>Page 4</h1>
-  <hr/>
   <a href="../index.html"><h2>Home</h2></a>
+  <hr/>
   <video src="file://localhost/C:\Users\sergi\Videos\LABSIS_REPORT\video\AC_DC_1.mp4" loop controls width="450">
   </video>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/a7qRuUAyqCg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+  </iframe>
+  <p>
+    <table>
+      <tr>
+        <td>one</td>
+        <td>two</td>
+        <td>three</td>
+        <td>four</td>
+      </tr>
+      <tr>
+        <td>um</td>
+        <td>dois</td>
+        <td>tres</td>
+        <td>quatro</td>
+      </tr>
+    </table>
+  </p>
+  <P>
+    <UL>
+      <LI> um </LI>
+      <LI> dois </LI>
+      <LI> tres </LI>
+      <LI>
+        <OL>
+          <LI>primeiro</LI>
+          <LI>segundo</LI>
+          <LI>terceiro</LI>
+        </OL>
+        <OL type="1">
+          <LI>primeiro</LI>
+          <LI>segundo</LI>
+          <LI>terceiro</LI>
+        </OL>
+        <OL type="A">
+          <LI>primeiro</LI>
+          <LI>segundo</LI>
+          <LI>terceiro</LI>
+        </OL>
+        <OL type="a">
+          <LI>primeiro</LI>
+          <LI>segundo</LI>
+          <LI>terceiro</LI>
+        </OL>
+        <OL type="i">
+          <LI>primeiro</LI>
+          <LI>segundo</LI>
+          <LI>terceiro</LI>
+        </OL>
+        <OL type="I">
+          <LI>primeiro</LI>
+          <LI>segundo</LI>
+          <LI>terceiro</LI>
+        </OL>
+      </LI>
+    </UL>
+    <dl>
+      <dt>pessoa 1</dt>
+      <dd>nome:</dd>
+      <dt>pessoa 2</dt>
+      <dd>nome:</dd>
+      <dt>pessoa 3</dt>
+      <dd>nome:</dd>
+      <dt>pessoa 4</dt>
+      <dd>nome:</dd>
+    </dl>
+  </P>
 </body>
 </html>
