--- a/Relatorio_2/LabsisWebPage/index.html
+++ b/Relatorio_2/LabsisWebPage/index.html
@@ -350,7 +350,7 @@
 									  <SPAN LANG="pt-BR">
 										  <SPAN STYLE="font-style: normal">
 											  <SPAN STYLE="font-weight: normal">
-													TEST CODE
+													Test Code
 												</SPAN>
 											</SPAN>
 										</SPAN>
@@ -773,22 +773,18 @@
 				</P>
 			</TD>
 		</TR>
-		<!-- ***Testar Codigo*** -->
+		<!-- ***Test Code*** -->
 		<TR>
 			<TD COLSPAN=12 WIDTH=100% VALIGN=TOP BGCOLOR="#eeeeee">
-				<P ALIGN=LEFT STYLE="margin-bottom: 0.51cm; border: none; padding: 0cm">
-          <P ALIGN=LEFT>
-              <a href="Pages/page_1.html"><h3>Page 1</h3></a>
-              <a href="Pages/page_2.html"><h3>Page 2</h3></a>
-              <a href="Pages/page_3.html"><h3>Page 3</h3></a>
-              <a href="Pages/page_4.html"><h3>Page 4</h3></a>
-              <a href="Pages/page_5.html"><h3>Page 5</h3></a>
-              <a href="Pages/page_6.html"><h3>Page 6</h3></a>
-              <a href="Pages/page_7.html"><h3>Page 7</h3></a>
-              <a href="Pages/page_8.html"><h3>Page 8</h3></a>
-					</P>
-					<BR/>
-				</P>
+				<!-- <P ALIGN=LEFT STYLE="margin-bottom: 0.51cm; border: none; padding: 0cm"> -->
+              <a href="Pages/page_1.html"><span> Page 1 </span></a>
+              <a href="Pages/page_2.html"><span> Page 2 </span></a>
+              <a href="Pages/page_3.html"><span> Page 3 </span></a>
+              <a href="Pages/page_4.html"><span> Page 4 </span></a>
+              <a href="Pages/page_5.html"><span> Page 5 </span></a>
+              <a href="Pages/page_6.html"><span> Page 6 </span></a>
+              <a href="Pages/page_7.html"><span> Page 7 </span></a>
+              <a href="Pages/page_8.html"><span> Page 8 </span></a>
 			</TD>
 		</TR>
     <!-- ***********************Menu 7***************************** -->
