--- a/Relatorio_2/LabsisWebPage/index.html
+++ b/Relatorio_2/LabsisWebPage/index.html
@@ -31,7 +31,7 @@
 <HR/>
 <!-- *********************************HEADER******************************* -->
 <BODY style="background-color:lightblue;" LANG="pt-BR" DIR="LTR">
-  <header>
+  <!-- ***<header>*** -->
   <!-- ***Configure HTML structure table*** -->
   <TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0 STYLE="page-break-before: always">
 		<COL WIDTH=15*>
@@ -365,49 +365,54 @@
       </TD>
 		</TR>
   </TABLE>
-  </header>
+  <!-- ***</header>*** -->
   <!-- *******************************MAIN************************************ -->
-  <main>
+  <!-- ***<main>*** -->
   <!-- ***Configure HTML structure table*** -->
   <TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0 STYLE="page-break-before: always">
-    <COL WIDTH=15*>
-    <COL WIDTH=7*>
-    <COL WIDTH=18*>
-    <COL WIDTH=38*>
-    <COL WIDTH=37*>
-    <COL WIDTH=13*>
-    <COL WIDTH=25*>
-    <COL WIDTH=38*>
-    <COL WIDTH=23*>
-    <COL WIDTH=9*>
-    <COL WIDTH=19*>
-    <COL WIDTH=15*>
+    <COL WIDTH=45*>
+    <COL WIDTH=45*>
+    <COL WIDTH=45*>
+    <COL WIDTH=45*>
+    <COL WIDTH=45*>
+    <COL WIDTH=45*>
 		<TR>
-			<TD COLSPAN=12 WIDTH=100% BGCOLOR="#ffffff" SDNUM="2070;1046;@">
+			<TD COLSPAN=6 WIDTH=100% BGCOLOR="#ffffff" SDNUM="2070;1046;@">
 				<P ALIGN=CENTER STYLE="background: #0099ff">
 				  <BR>
 				</P>
 			</TD>
 		</TR>
 	  <!-- ***IMAGE with linked video*** -->
+    <BR/>
 		<TR>
-			<TD COLSPAN=12 WIDTH=100% BGCOLOR="#eeeeee">
+      <TD COLSPAN=1 WIDTH=10% BGCOLOR="#eeeeee">
+      </TD>
+			<TD COLSPAN=1 WIDTH=20% BGCOLOR="#eeeeee">
+        <BR/>
 				<P ALIGN=CENTER STYLE="margin-bottom: 0.5cm; background: #eeeeee">
-        <!-- <P ALIGN=CENTER STYLE="margin-bottom: 0.5cm; background: #eeeeee"> -->
-				  <BR>
+          <!-- <P ALIGN=CENTER STYLE="margin-bottom: 0.5cm; background: #eeeeee"> -->
           <video src="file://localhost/C:\Users\sergi\Videos\LABSIS_REPORT\video\AC_DC_1.mp4" controls width="450">
           </video>
-				<!-- </P> -->
-				<!-- <P ALIGN=CENTER STYLE="background: #eeeeee"> -->
+        </p>
+      </TD>
+      <!-- <TD COLSPAN=1 WIDTH=100% BGCOLOR="#eeeeee">
+      </TD>
+      -->
+      <TD COLSPAN=1 WIDTH=65% BGCOLOR="#eeeeee">
+        <P ALIGN=CENTER STYLE="margin-bottom: 0.5cm; background: #eeeeee">
 				  <A HREF="file://localhost/C:\Users\sergi\Videos\LABSIS_REPORT\video\Bob_Marley_1.mp4" target="_blank">
 				    <IMG SRC="image/sample_1.gif" NAME="Demo_1" ALIGN=BOTTOM WIDTH=360 HEIGHT=256 BORDER=0>
 				  </A>
 				</P>
 			</TD>
+      <TD COLSPAN=3 WIDTH=1% BGCOLOR="#eeeeee">
+        <BR/>
+      </TD>
 		</TR>
 	  <!-- ***Menu 1*** -->
 		<TR VALIGN=TOP>
-			<TD COLSPAN=11 WIDTH=94%>
+			<TD COLSPAN=5 WIDTH=94%>
 				<UL>
 					<LI>
 					  <P ALIGN=LEFT STYLE="background: #0099ff; border: none; padding: 0cm">
@@ -448,7 +453,7 @@
 		</TR>
 		<!-- ***Introducao*** -->
 		<TR>
-			<TD COLSPAN=12 WIDTH=100% VALIGN=TOP BGCOLOR="#eeeeee">
+			<TD COLSPAN=6 WIDTH=100% VALIGN=TOP BGCOLOR="#eeeeee">
 				<P ALIGN=LEFT STYLE="margin-bottom: 0.51cm; border: none; padding: 0cm">
 				  Introducao
 				</P>
@@ -467,7 +472,7 @@
 		</TR>
   	<!-- ***Menu 2*** -->
 		<TR VALIGN=TOP>
-			<TD COLSPAN=11 WIDTH=94%>
+			<TD COLSPAN=5 WIDTH=94%>
 				<UL>
 					<LI>
 					<P ALIGN=LEFT STYLE="background: #0099ff; border: none; padding: 0cm">
@@ -502,7 +507,7 @@
 		</TR>
 		<!-- ***Arquitectura*** -->
 		<TR>
-			<TD COLSPAN=12 WIDTH=100% VALIGN=TOP BGCOLOR="#eeeeee">
+			<TD COLSPAN=6 WIDTH=100% VALIGN=TOP BGCOLOR="#eeeeee">
 				<P ALIGN=LEFT STYLE="margin-bottom: 0.51cm; border: none; padding: 0cm">
 			  	<BR/>
 					<BR/>
@@ -524,7 +529,7 @@
 		</TR>
   	<!-- ***Menu 3*** -->
 		<TR VALIGN=TOP>
-			<TD COLSPAN=11 WIDTH=94%>
+			<TD COLSPAN=5 WIDTH=94%>
 				<UL>
 					<LI>
 					<P ALIGN=LEFT STYLE="background: #0099ff; border: none; padding: 0cm">
@@ -559,7 +564,7 @@
 		</TR>
 		<!-- ***Hardware*** -->
 		<TR>
-			<TD COLSPAN=12 WIDTH=100% VALIGN=TOP BGCOLOR="#eeeeee">
+			<TD COLSPAN=6 WIDTH=100% VALIGN=TOP BGCOLOR="#eeeeee">
 				<P ALIGN=LEFT STYLE="margin-bottom: 0.51cm; border: none; padding: 0cm">
 			  	<BR/>
 					<BR/>
@@ -579,7 +584,7 @@
 		</TR>
   	<!-- ***Menu 4*** -->
 		<TR VALIGN=TOP>
-			<TD COLSPAN=11 WIDTH=94%>
+			<TD COLSPAN=5 WIDTH=94%>
 				<UL>
 					<LI>
 					<P ALIGN=LEFT STYLE="background: #0099ff; border: none; padding: 0cm">
@@ -614,7 +619,7 @@
 		</TR>
 		<!-- ***Software*** -->
 		<TR>
-			<TD COLSPAN=12 WIDTH=100% VALIGN=TOP BGCOLOR="#eeeeee">
+			<TD COLSPAN=6 WIDTH=100% VALIGN=TOP BGCOLOR="#eeeeee">
 				<P ALIGN=LEFT STYLE="margin-bottom: 0.51cm; border: none; padding: 0cm">
 			  	<BR/>
           <A HREF="https://github.com/sergio1020881/LABSIS20202021/tree/main/Relatorio_2/Projecto/SunTrack" target="_blank">
@@ -637,7 +642,7 @@
 		</TR>
   	<!-- ***Menu 5*** -->
 		<TR VALIGN=TOP>
-			<TD COLSPAN=11 WIDTH=94%>
+			<TD COLSPAN=5 WIDTH=94%>
 				<UL>
 					<LI>
 					<P ALIGN=LEFT STYLE="background: #0099ff; border: none; padding: 0cm">
@@ -672,7 +677,7 @@
 		</TR>
 		<!-- ***Resultados*** -->
 		<TR>
-			<TD COLSPAN=12 WIDTH=100% VALIGN=TOP BGCOLOR="#eeeeee">
+			<TD COLSPAN=6 WIDTH=100% VALIGN=TOP BGCOLOR="#eeeeee">
 				<P ALIGN=LEFT STYLE="margin-bottom: 0.51cm; border: none; padding: 0cm">
 			  	<BR/>
 					<BR/>
@@ -692,7 +697,7 @@
 		</TR>
   	<!-- ***Menu 6*** -->
     <TR VALIGN=TOP>
-      <TD COLSPAN=11 WIDTH=94%>
+      <TD COLSPAN=5 WIDTH=94%>
         <UL>
           <LI>
           <P ALIGN=LEFT STYLE="background: #0099ff; border: none; padding: 0cm">
@@ -727,7 +732,7 @@
     </TR>
     <!-- ***Conclusoes*** -->
     <TR>
-      <TD COLSPAN=12 WIDTH=100% VALIGN=TOP BGCOLOR="#eeeeee">
+      <TD COLSPAN=6 WIDTH=100% VALIGN=TOP BGCOLOR="#eeeeee">
         <P ALIGN=LEFT STYLE="margin-bottom: 0.51cm; border: none; padding: 0cm">
           <BR/>
           <BR/>
@@ -747,7 +752,7 @@
     </TR>
     <!-- ***Menu TEST*** -->
 		<TR VALIGN=TOP>
-			<TD COLSPAN=11 WIDTH=94%>
+			<TD COLSPAN=5 WIDTH=94%>
 				<UL>
 					<LI>
 					<P ALIGN=LEFT STYLE="background: #0099ff; border: none; padding: 0cm">
@@ -782,7 +787,7 @@
 		</TR>
 		<!-- ***Test Code*** -->
 		<TR>
-			<TD COLSPAN=12 WIDTH=100% VALIGN=TOP BGCOLOR="#eeeeee">
+			<TD COLSPAN=6 WIDTH=100% VALIGN=TOP BGCOLOR="#eeeeee">
 				<!-- <P ALIGN=LEFT STYLE="margin-bottom: 0.51cm; border: none; padding: 0cm"> -->
               <a href="Pages/page_1.html"><span> Page 1 </span></a>
               <a href="Pages/page_2.html"><span> Page 2 </span></a>
@@ -796,7 +801,7 @@
 		</TR>
     <!-- ***********************Menu 7***************************** -->
 		<TR VALIGN=TOP>
-			<TD COLSPAN=11 WIDTH=94%>
+			<TD COLSPAN=5 WIDTH=94%>
 				<UL>
 					<LI>
 					<P ALIGN=LEFT STYLE="background: #0099ff; border: none; padding: 0cm">
@@ -831,7 +836,7 @@
 		</TR>
 		<!-- ***Referencias*** -->
 		<TR>
-			<TD COLSPAN=12 WIDTH=100% VALIGN=TOP BGCOLOR="#eeeeee">
+			<TD COLSPAN=6 WIDTH=100% VALIGN=TOP BGCOLOR="#eeeeee">
 				<P ALIGN=LEFT STYLE="margin-bottom: 0.51cm; border: none; padding: 0cm">
 		  		<A NAME="_Ref153776170">
 		  		</A>
@@ -962,7 +967,7 @@
   	</TR>
 		<!-- ***Last blue bar*** -->
   	<TR VALIGN=TOP>
-	  	<TD COLSPAN=11 WIDTH=94%>
+	  	<TD COLSPAN=5 WIDTH=94%>
 	  		<P ALIGN=LEFT STYLE="background: #0099ff">
           <BR/>
 		  	</P>
@@ -989,7 +994,7 @@
     </TR>
 		<!-- ********************************************************************* -->
 	</TABLE>
-  </main>
+  <!-- ***</main>*** -->
   <HR/>
   <footer>
   <P ALIGN=LEFT>
@@ -1010,6 +1015,7 @@
   </P>
   <P ALIGN=CENTER>
 	  <BR>
+    <span> congratiolations this is the end of &ndsp &ndsp FILEc </span>
 		<BR>
   </P>
   </footer>
