--- a/Relatorio_2/LabsisWebPage/index.html
+++ b/Relatorio_2/LabsisWebPage/index.html
@@ -509,15 +509,24 @@
 		<TR>
 			<TD COLSPAN=6 WIDTH=100% VALIGN=TOP BGCOLOR="#eeeeee">
 				<P ALIGN=LEFT STYLE="margin-bottom: 0.51cm; border: none; padding: 0cm">
-			  	<BR/>
-					<BR/>
-			  	Arquitetura
-			  	<BR/>
-			  	ytytytyt
-			  	uiui
-				</P>
+
+
+
+O <b> CPU </b> (Unidade Central de Processamento) dos microcontroldores da Atmel de 8 e 32 bits s\~{a}o baseados na arquitetura avan\c{c}ada de {\bf Harvard} na qual esta concebido para baixos consumos e performance. \par
+Este tipo de arquitetura tem dois  busses (barramentos) um dedicado a leitura das instruções a executar e outra para escrita e leitura de data (informa\c{c}\~{a}o ou dados), isto assegura que uma nova instru\c{c}\~{a}o pode ser executada em cada ciclo de rel\'{o}gio, na qual elimina estados de espera quando n\~{a}o ha instru\c{c}\~{o}es prontas a executar. \par
+Nos microcontroladores da AVR os barramentos est\~{a}o configurados de forma a dar prioridade ao barramento das instru\c{c}\~{o}es do CPU acesso a memoria flash enquanto o barramento da CPU de dados tem prioridade de acesso a {\bf SRAM} (Static Random Access Memory). \par
+O espa\c{c}o de memoria de dados \'{e} dividida em tr\^{e}s, os {\bf GPR} (General Purpose Registers) as {\bf SFRs} (Special Function Registers) ou memoria de I/O e a data SRAM. \par
+<BR/>
+Os microcontroladores da AVR utiliza uma arquitetura de instru\c{c}\~{o}es {\bf RISC} (Reduced Instruction Set Computer ou Reduced COMPLEXITY Instruction Set Computer) na qual reduz a complexidade dos circuitos na codifica\c{c}\~{a}o de cada instru\c{c}\~{a}o. \par
+Dai que os microcontroladores que se baseiam nestes tipos de arquitetura s\~{a}o sinonimo de c\'{o}digo reduzido, alta performance e baixo consumo energ\'{e}tico \par
+
+
+
+
+
+        </P>
 				<P ALIGN=LEFT STYLE="margin-bottom: 0.51cm"><BR><BR>
-			  	Arquitetura
+			  	<img src="image/arquitecture/Harvard_architecture.png" width="450">
 				</P>
 				<P ALIGN=LEFT STYLE="margin-bottom: 0.51cm"><BR><BR>
 			  	Arquitetura
@@ -578,7 +587,29 @@
 					<BR/>
 				</P>
 				<P ALIGN=LEFT>
-			  	<BR/>
+
+
+
+<div>
+<img src="image/hardware/chips_1.jpg" width="450">
+<img src="image/hardware/DevBoard_1.jpg" width="450">
+<img src="image/hardware/DevBoard_2.jpg" width="450">
+<img src="image/hardware/ESP8266_1.jpg" width="450">
+<img src="image/hardware/HC595_1.jpg" width="450">
+<img src="image/hardware/HC595_2.jpg" width="450">
+<img src="image/hardware/INA128_1.jpg" width="450">
+<img src="image/hardware/Kit_1.jpg" width="450">
+<img src="image/hardware/PCF8563_1.jpg" width="450">
+<img src="image/hardware/Power_Supply_1.jpg" width="450">
+<img src="image/hardware/RS2_1.jpg" width="450">
+</div>
+
+
+
+
+
+
+
 				</P>
 			</TD>
 		</TR>
@@ -621,11 +652,18 @@
 		<TR>
 			<TD COLSPAN=6 WIDTH=100% VALIGN=TOP BGCOLOR="#eeeeee">
 				<P ALIGN=LEFT STYLE="margin-bottom: 0.51cm; border: none; padding: 0cm">
-			  	<BR/>
-          <A HREF="https://github.com/sergio1020881/LABSIS20202021/tree/main/Relatorio_2/Projecto/SunTrack" target="_blank">
-				    <IMG SRC="image/software/Atmel_Studio_7_1.bmp" NAME="Atmel Studio 7" ALIGN=BOTTOM HEIGHT=100 BORDER=0>
-				  </A>
-					<BR/>
+
+
+<BR/>
+Programa: <BR/>
+<A HREF="https://github.com/sergio1020881/LABSIS20202021/tree/main/Relatorio_2/Projecto/SunTrack" target="_blank">
+<IMG SRC="image/software/Atmel_Studio_7_1.bmp" NAME="Atmel Studio 7" ALIGN=BOTTOM HEIGHT=100 BORDER=0>
+</A>
+<BR/>
+Programador: <BR/>
+<IMG SRC="image/software/ISP_JTAG/isp_6pin.png" NAME="ISP_6PIN" ALIGN=BOTTOM HEIGHT=125 BORDER=0>
+<IMG SRC="image/software/ISP_JTAG/isp_connector.png" NAME="ISP_CONNECTOR" ALIGN=BOTTOM HEIGHT=125 BORDER=0>
+
 				</P>
 				<P ALIGN=LEFT STYLE="margin-bottom: 0.51cm">
 			  	<BR/>
