--- a/Relatorio_2/LabsisWebPage/Pages/page_6.html
+++ b/Relatorio_2/LabsisWebPage/Pages/page_6.html
@@ -1,28 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Page 6</title>
+<meta charset="UTF-8">
+<title>
+  Page 6
+</title>
 </head>
 <body>
-  <h1>Page 6</h1>
-  <a href="../index.html"><h2>Home</h2></a>
-  <hr/>
-
-  <span>span 1</span>
-  <span>span 2</span>
-  <span>span 3</span>
-  <hr/>
-  <div>div 1
-    ghghgh
-    hjhj
-    hjhj
-  </div>
-  <div>div 2</div>
-  <div>div 3</div>
-
-
-
-
+<h1>
+  Page 6
+</h1>
+<a href="../index.html"><h2>Home</h2></a>
+<hr/>
+<span>
+  span 1
+</span>
+<span>
+  span 2
+</span>
+<span>
+  span 3
+</span>
+<hr/>
+<div>
+  div 1
+  ghghgh
+  hjhj
+  hjhj
+</div>
+<div>
+  div 2
+</div>
+<div>
+  div 3
+</div>
 </body>
 </html>
