--- a/Relatorio_2/LabsisWebPage/Pages/page_8.html
+++ b/Relatorio_2/LabsisWebPage/Pages/page_8.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Page 8</title>
+<meta charset="UTF-8">
+<title>
+  Page 8
+</title>
 </head>
 <body>
-  <h1>Page 8</h1>
-  <a href="../index.html"><h2>Home</h2></a>
-  <hr/>
-  <video src="file://localhost/C:\Users\sergi\Videos\LABSIS_REPORT\video\AC_DC_1.mp4" loop controls width="450">
-  </video>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/a7qRuUAyqCg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-  Not Supported</iframe>
-
-
+<h1>Page 8</h1>
+<a href="../index.html"><h2>Home</h2></a>
+<hr/>
+<video src="file://localhost/C:\Users\sergi\Videos\LABSIS_REPORT\video\AC_DC_1.mp4" loop controls width="450">
+</video>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/a7qRuUAyqCg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+Not Supported
+</iframe>
 </body>
 </html>
