--- a/Relatorio_2/LabsisWebPage/Pages/page_3.html
+++ b/Relatorio_2/LabsisWebPage/Pages/page_3.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Page 3</title>
+<meta charset="UTF-8">
+<title>
+  Page 3
+</title>
 </head>
 <body>
-  <h1>Page 3</h1>
-  <a href="../index.html"><h2>Home</h2></a>
-  <hr/>
-  <video src="file://localhost/C:\Users\sergi\Videos\LABSIS_REPORT\video\Bob_Marley_1.mp4" controls width="300">
-  </video>
-  <video src="file://localhost/C:\Users\sergi\Videos\LABSIS_REPORT\video\AC_DC_1.mp4" autoplay controls width="450">
-  </video>
-  <!--
-  <video src="file://localhost/C:\Users\sergi\Videos\LABSIS_REPORT\video\AC_DC_1.mp4" poster="img.jpg" autoplay controls width="450">
-  </video>
-  first appears image then starts running the video.
-  -->
+<h1>Page 3</h1>
+<a href="../index.html"><h2>Home</h2></a>
+<hr/>
+<video src="file://localhost/C:\Users\sergi\Videos\LABSIS_REPORT\video\Bob_Marley_1.mp4" controls width="300">
+</video>
+<video src="file://localhost/C:\Users\sergi\Videos\LABSIS_REPORT\video\AC_DC_1.mp4" autoplay controls width="450">
+</video>
+<!--
+<video src="file://localhost/C:\Users\sergi\Videos\LABSIS_REPORT\video\AC_DC_1.mp4" poster="img.jpg" autoplay controls width="450">
+</video>
+first appears image then starts running the video.
+-->
 </body>
 </html>
