--- a/Relatorio_2/LabsisWebPage/modelo/Pages/page_1.html
+++ b/Relatorio_2/LabsisWebPage/modelo/Pages/page_1.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Page 1</title>
+<meta charset="UTF-8">
+<title>
+  Page 1
+</title>
 </head>
 <body>
-  <h1>Page 1</h1>
-  <a href="../index.html"><h2>Home</h2></a>
-  <hr/>
-  <a href="../image/hardware/chips_1.jpg"><h2>Chips 1</h2></a>
-  <a href="../image/hardware/DevBoard_1.jpg"><h2>Dev board 1</h2></a>
-  <a href="../image/hardware/DevBoard_2.jpg"><h2>Dev board 2</h2></a>
-  <a href="../image/hardware/ESP8266_1.jpg"><h2>ESP 8266 1</h2></a>
-  <a href="../image/hardware/HC595_1.jpg"><h2>HC595 1</h2></a>
-  <a href="../image/hardware/HC595_2.jpg"><h2>HC595 2</h2></a>
-  <a href="../image/hardware/INA128_1.jpg"><h2>INA128 1</h2></a>
-  <a href="../image/hardware/Kit_1.jpg"><h2>Kit 1</h2></a>
-  <a href="../image/hardware/PCF8563_1.jpg"><h2>PCF8563 1</h2></a>
-  <a href="../image/hardware/Power_Supply_1.jpg"><h2>Power Supply 1</h2></a>
-  <a href="../image/hardware/RS2_1.jpg"><h2>RS2 1</h2></a>
-  <hr/>
-  <div>
+<h1>Page 1</h1>
+<a href="../index.html"><h2>Home</h2></a>
+<hr/>
+<a href="../image/hardware/chips_1.jpg"><h2>Chips 1</h2></a>
+<a href="../image/hardware/DevBoard_1.jpg"><h2>Dev board 1</h2></a>
+<a href="../image/hardware/DevBoard_2.jpg"><h2>Dev board 2</h2></a>
+<a href="../image/hardware/ESP8266_1.jpg"><h2>ESP 8266 1</h2></a>
+<a href="../image/hardware/HC595_1.jpg"><h2>HC595 1</h2></a>
+<a href="../image/hardware/HC595_2.jpg"><h2>HC595 2</h2></a>
+<a href="../image/hardware/INA128_1.jpg"><h2>INA128 1</h2></a>
+<a href="../image/hardware/Kit_1.jpg"><h2>Kit 1</h2></a>
+<a href="../image/hardware/PCF8563_1.jpg"><h2>PCF8563 1</h2></a>
+<a href="../image/hardware/Power_Supply_1.jpg"><h2>Power Supply 1</h2></a>
+<a href="../image/hardware/RS2_1.jpg"><h2>RS2 1</h2></a>
+<hr/>
+<div>
   <img src="../image/hardware/chips_1.jpg" width="450">
   <img src="../image/hardware/DevBoard_1.jpg" width="450">
   <img src="../image/hardware/DevBoard_2.jpg" width="450">
@@ -32,19 +34,19 @@
   <img src="../image/hardware/PCF8563_1.jpg" width="450">
   <img src="../image/hardware/Power_Supply_1.jpg" width="450">
   <img src="../image/hardware/RS2_1.jpg" width="450">
-  </div>
-  <hr/>
-  <a href="../image/hardware/chips_1.jpg"><h2>Chips 1</h2></a>
-  <a href="../image/hardware/DevBoard_1.jpg"><h2>Dev board 1</h2></a>
-  <a href="../image/hardware/DevBoard_2.jpg"><h2>Dev board 2</h2></a>
-  <a href="../image/hardware/ESP8266_1.jpg"><h2>ESP 8266 1</h2></a>
-  <a href="../image/hardware/HC595_1.jpg"><h2>HC595 1</h2></a>
-  <a href="../image/hardware/HC595_2.jpg"><h2>HC595 2</h2></a>
-  <a href="../image/hardware/INA128_1.jpg"><h2>INA128 1</h2></a>
-  <a href="../image/hardware/Kit_1.jpg"><h2>Kit 1</h2></a>
-  <a href="../image/hardware/PCF8563_1.jpg"><h2>PCF8563 1</h2></a>
-  <a href="../image/hardware/Power_Supply_1.jpg"><h2>Power Supply 1</h2></a>
-  <a href="../image/hardware/RS2_1.jpg"><h2>RS2 1</h2></a>
+</div>
+<hr/>
+<a href="../image/hardware/chips_1.jpg"><h2>Chips 1</h2></a>
+<a href="../image/hardware/DevBoard_1.jpg"><h2>Dev board 1</h2></a>
+<a href="../image/hardware/DevBoard_2.jpg"><h2>Dev board 2</h2></a>
+<a href="../image/hardware/ESP8266_1.jpg"><h2>ESP 8266 1</h2></a>
+<a href="../image/hardware/HC595_1.jpg"><h2>HC595 1</h2></a>
+<a href="../image/hardware/HC595_2.jpg"><h2>HC595 2</h2></a>
+<a href="../image/hardware/INA128_1.jpg"><h2>INA128 1</h2></a>
+<a href="../image/hardware/Kit_1.jpg"><h2>Kit 1</h2></a>
+<a href="../image/hardware/PCF8563_1.jpg"><h2>PCF8563 1</h2></a>
+<a href="../image/hardware/Power_Supply_1.jpg"><h2>Power Supply 1</h2></a>
+<a href="../image/hardware/RS2_1.jpg"><h2>RS2 1</h2></a>
 <hr/>
 </body>
 </html>
