--- a/Relatorio_2/LabsisWebPage/modelo/Pages/page_5.html
+++ b/Relatorio_2/LabsisWebPage/modelo/Pages/page_5.html
@@ -1,40 +1,68 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Page 5</title>
+<meta charset="UTF-8">
+<title>
+  Page 5
+</title>
 </head>
 <body>
-  <h1>Page 5</h1>
-  <a href="../index.html"><h2>Home</h2></a>
-  <hr/>
-  <main>
-    <table>
-      <thead>
-        <tr>
-          <caption><h1>Caption</h1></caption>
-          <th width="100"> header 1</th>
-          <th> header 2</th>
-          <th> header 3</th>
-          <th> header 4</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td> header 1</td>
-          <td> header 2</td>
-          <td> header 3</td>
-          <td> header 4</td>
-          <td> header 4</td>
-        </tr>
-        <tr>
-          <td colspan="2"> header 1</td>
-          <td> header 2</td>
-          <td> header 3</td>
-          <td> header 4</td>
-        </tr>
-      <main>
-    </tbody>
-  </table>
+<h1>Page 5</h1>
+<a href="../index.html"><h2>Home</h2></a>
+<hr/>
+<main>
+<table>
+  <tr>
+    <caption>
+      <h1>
+        Caption
+      </h1>
+    </caption>
+    <th width="100">
+      header 1
+    </th>
+    <th>
+      header 2
+    </th>
+    <th>
+      header 3
+    </th>
+    <th>
+      header 4
+    </th>
+  </tr>
+  <tr>
+    <td>
+      header 1
+    </td>
+    <td>
+      header 2
+    </td>
+    <td>
+      header 3
+    </td>
+    <td>
+      header 4
+    </td>
+    <td>
+      header 4
+    </td>
+  </tr>
+  <tr>
+    <td colspan="2">
+      header 1
+    </td>
+    <td>
+      header 2
+    </td>
+    <td>
+      header 3
+    </td>
+    <td>
+      header 4
+    </td>
+  </tr>
+</table>
+</main>
 </body>
 </html>
