--- a/Relatorio_2/LabsisWebPage/modelo/Pages/page_7.html
+++ b/Relatorio_2/LabsisWebPage/modelo/Pages/page_7.html
@@ -1,40 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Page 7</title>
+<meta charset="UTF-8">
+<title>
+  Page 7
+</title>
 </head>
 <body>
-  <h1>Page 7</h1>
-  <a href="../index.html"><h2>Home</h2></a>
+<h1>
+  Page 7
+</h1>
+<a href="../index.html">
+  <h2>
+    Home
+  </h2>
+</a>
+<hr/>
+<h1>
+  www.w3schools.com
+</h1>
+<form>
+  <input type="text"/>
   <hr/>
-  <h1>www.w3schools.com</h1>
-  <form>
-    <input type="text"/>
-    <hr/>
-    <input type="password"/>
-    <hr/>
-    <input type="text" value="Enter your username"/>
-    <hr/>
-    <textarea rows="10" cols="30">
-      Enter:
-    </textarea>
-    <hr/>
-    <input type="range"/>
-    <hr/>
-    <input type="file"/>
-    <hr/>
-    <input type="checkbox"/>
-    <input type="checkbox"/>
-    <hr/>
-    <input name="btn" type="radio"/>
-    <input name="btn" type="radio"/>
-    <hr/>
-    <hr/>
-    <input type="submit"/>
-  </form>
-
-
-
+  <input type="password"/>
+  <hr/>
+  <input type="text" value="Enter your username"/>
+  <hr/>
+  <textarea rows="10" cols="30">
+    Enter:
+  </textarea>
+  <hr/>
+  <input type="range"/>
+  <hr/>
+  <input type="file"/>
+  <hr/>
+  <input type="checkbox"/>
+  <input type="checkbox"/>
+  <hr/>
+  <input name="btn" type="radio"/>
+  <input name="btn" type="radio"/>
+  <hr/>
+  <hr/>
+  <input type="submit"/>
+</form>
 </body>
 </html>
