--- a/Relatorio_2/LabsisWebPage/Pages/page_2.html
+++ b/Relatorio_2/LabsisWebPage/Pages/page_2.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Page 2</title>
+<meta charset="UTF-8">
+<title>
+  Page 2
+</title>
 </head>
 <body>
-  <h1>Page 2</h1>
-  <a href="../index.html"><h2>Home</h2></a>
-  <hr/>
-  <img src="https://i.insider.com/5d8cdcdb2e22af02db6a2b7f?width=1100&format=jpeg&auto=webp" height="500" alt="Not Found">
-  <img src="../image/hardware/DevBoard_2.jpg" alt="Not Found">
+<h1>Page 2</h1>
+<a href="../index.html"><h2>Home</h2></a>
+<hr/>
+<img src="https://i.insider.com/5d8cdcdb2e22af02db6a2b7f?width=1100&format=jpeg&auto=webp" height="500" alt="Not Found">
+<img src="../image/hardware/DevBoard_2.jpg" alt="Not Found">
 </body>
 </html>
