--- a/Relatorio_2/LabsisWebPage/index.html
+++ b/Relatorio_2/LabsisWebPage/index.html
@@ -657,6 +657,21 @@
 			</P>
 			<P ALIGN=LEFT STYLE="margin-bottom: 0.51cm">
 			  	<BR/>
+				<B>Fluxograma:</B>
+				<BR/>
+				<BR/>
+				<TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0 STYLE="page-break-before: always">
+					<TR>
+						<TD WIDTH=5%>
+						</TD>
+						<TD WIDTH=40%>
+							<IMG SRC="image/fluxograma/MODEL_1.jpg" NAME="Demo_1" ALIGN=BOTTOM HEIGHT=500 BORDER=0>
+						</TD>
+						<TD VALIGN=TOP>
+							<IMG SRC="image/fluxograma/MODEL_2.jpg" NAME="Demo_1" ALIGN=BOTTOM HEIGHT=150 BORDER=0>
+						</TD>
+					</TR>
+				</TABLE>
 				<BR/>
 			</P>
 			<P ALIGN=LEFT STYLE="margin-bottom: 0.51cm">
