--- a/Relatorio_2/LabsisWebPage/modelo/index.html
+++ b/Relatorio_2/LabsisWebPage/modelo/index.html
@@ -664,11 +664,11 @@
 					<TR>
 						<TD WIDTH=5%>
 						</TD>
-						<TD WIDTH=40%>
-							<IMG SRC="image/fluxograma/MODEL_1.jpg" NAME="Demo_1" ALIGN=BOTTOM HEIGHT=500 BORDER=0>
+						<TD WIDTH=50%>
+							<IMG SRC="image/fluxograma/flowchart_1.gif" NAME="Demo_1" ALIGN=BOTTOM HEIGHT=550 BORDER=0>
 						</TD>
 						<TD VALIGN=TOP>
-							<IMG SRC="image/fluxograma/MODEL_2.jpg" NAME="Demo_1" ALIGN=BOTTOM HEIGHT=150 BORDER=0>
+							<IMG SRC="image/fluxograma/flowchart_2.gif" NAME="Demo_1" ALIGN=BOTTOM HEIGHT=230 BORDER=0>
 						</TD>
 					</TR>
 				</TABLE>
@@ -880,27 +880,62 @@
 	<!-- ***Referencias*** -->
 	<TR>
 		<TD COLSPAN=6 WIDTH=100% VALIGN=TOP BGCOLOR="#eeeeee">
+			<P STYLE="margin-bottom: 0.5cm">
+			  	<A NAME="_Ref1">
+				</A>
+				<A NAME="_Ref1">
+				</A>
+		    	<SPAN LANG="en-GB">
+					[1]
+				</SPAN>
+				<SPAN LANG="en-GB">
+					Mukund R. Patel
+				</SPAN>
+				<SPAN LANG="en-GB">
+				  	<I>
+						Wind and Solar Power Systems Design, Analysis and Operation Second Edition
+				  	</I>
+			  	</SPAN>
+		  		<SPAN LANG="en-GB">.
+					Taylor & Francis Group LLC. 2006.
+  				</SPAN>
+			</P>
 			<P ALIGN=LEFT STYLE="margin-bottom: 0.51cm; border: none; padding: 0cm">
-	 			<A NAME="_Ref153776170">
-		  		</A>
-		  		<A NAME="_Ref152167798">
+	 			<A NAME="_Ref2">
 		  		</A>
 		  		<SPAN LANG="en-US">
-		    		[1]
+		    		[2]
 		  		</SPAN>
 		  		<SPAN LANG="en-US">
-		    		Alcatel
+		    		Stephen W Fardo, Dale R. Patrick
 		  		</SPAN>
 		  		&mdash;
 		  		<SPAN LANG="en-US">
 		    		<I>
-			    		SAM-O Service Aware Manager Open Interface, Release 3.0, OSS Interface Developer Guide
+			    		Electrical Power Systems Technology Third Edition
 			  		</I>
 		  		</SPAN>
 		  		<SPAN LANG="en-US">
-		    		. Alcatel, 2005.
+		    		. CRC Press, 2008.
 	  			</SPAN>
 	  		</P>
+			  <P STYLE="margin-bottom: 0.5cm">
+				<A NAME="_Ref3">
+				</A>
+				<SPAN LANG="en-US">
+					[3]
+				</SPAN>
+	  			<SPAN LANG="en-US">
+					science.nasa.gov;
+  				</SPAN>
+				<A HREF="https://science.nasa.gov/science-news/science-at-nasa/2002/solarcells" target="_blank">
+					<SPAN STYLE="text-decoration: none">
+						<SPAN LANG="en-US">
+							https://science.nasa.gov/science-news/science-at-nasa/2002/solarcells
+						</SPAN>
+					</SPAN>
+				</A>
+			</P>
 			<P STYLE="margin-bottom: 0.5cm">
 		  		<A NAME="_Ref153776244">
 				</A>	
@@ -921,7 +956,7 @@
 		    		[3]
 		  		</SPAN>
 		   		<SPAN LANG="de-DE">
-			    	Hofmann, Alfred; Barth, Ursula; Beyer, Ingrid; G&uuml;nther, Christine;
+			    	Mukund R. Patel
 			  	</SPAN>
 		    	<SPAN LANG="en-GB">
 	  		 	 	Holzwarth, Frank; Kramer, Anna;
@@ -953,45 +988,6 @@
 		       		Germany
   				</SPAN>
 	  		</P>
-			<P STYLE="margin-bottom: 0.5cm">
-			  	<A NAME="_Ref153776394">
-				</A>
-				<A NAME="_Ref117412991">
-				</A>
-		    	<SPAN LANG="en-GB">
-					[4]
-				</SPAN>
-				<SPAN LANG="en-GB">
-					Mauro, Douglas;
-		      		Schmidt, Kevin&mdash;
-				</SPAN>
-				<SPAN LANG="en-GB">
-				  	<I>
-					  	Essential SNMP,
-		          		Help for System and Network Administrators
-				  	</I>
-			  	</SPAN>
-		  		<SPAN LANG="en-GB">.
-	  	     		O&rsquo;Reilly, 2001. ISBN 0-596-00020-0.
-  				</SPAN>
-			</P>
-		    <P STYLE="margin-bottom: 0.5cm">
-				<A NAME="_Ref152182530">
-				</A>
-				<SPAN LANG="en-US">
-					[5]
-				</SPAN>
-	  			<SPAN LANG="en-US">
-					Net-SNMP, Version:&nbsp; 5.2.1,
-  				</SPAN>
-				<A HREF="http://www.net-snmp.org/">
-					<SPAN STYLE="text-decoration: none">
-						<SPAN LANG="en-US">
-							http://www.net-snmp.org/
-						</SPAN>
-					</SPAN>
-				</A>
-			</P>
 			<P STYLE="margin-bottom: 0.5cm">
 				<A NAME="_Ref153776459">
 				</A>
