--- a/Relatorio_2/LabsisWebPage/Pages/page_8.html
+++ b/Relatorio_2/LabsisWebPage/Pages/page_8.html
@@ -7,8 +7,14 @@
 </title>
 </head>
 <body>
-<h1>Page 8</h1>
-<a href="../index.html"><h2>Home</h2></a>
+<h1>
+  Page 8
+</h1>
+<a href="../index.html">
+  <h2>
+    Home
+  </h2>
+</a>
 <hr/>
 <video src="file://localhost/C:\Users\sergi\Videos\LABSIS_REPORT\video\AC_DC_1.mp4" loop controls width="450">
 </video>
