--- a/Relatorio_2/LabsisWebPage/modelo/index.html
+++ b/Relatorio_2/LabsisWebPage/modelo/index.html
@@ -870,14 +870,17 @@
 	<TR>
 		<TD COLSPAN=6 WIDTH=100% VALIGN=TOP BGCOLOR="#eeeeee">
 			<!-- <P ALIGN=LEFT STYLE="margin-bottom: 0.51cm; border: none; padding: 0cm"> -->
-    	    <a href="Pages/page_1.html"><span> Page 1 </span></a>
-            <a href="Pages/page_2.html"><span> Page 2 </span></a>
-            <a href="Pages/page_3.html"><span> Page 3 </span></a>
-            <a href="Pages/page_4.html"><span> Page 4 </span></a>
-            <a href="Pages/page_5.html"><span> Page 5 </span></a>
-            <a href="Pages/page_6.html"><span> Page 6 </span></a>
-            <a href="Pages/page_7.html"><span> Page 7 </span></a>
-            <a href="Pages/page_8.html"><span> Page 8 </span></a>
+			<!-- <span style='color:red;margin-right:1.25em; display:inline-block;'>&nbsp;</span> -->
+
+    	    <a href="Pages/page_1.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> &nbsp; Page 1 </span></a>
+            <a href="Pages/page_2.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> &nbsp; Page 2 </span></a>
+            <a href="Pages/page_3.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> Page 3 </span></a>
+            <a href="Pages/page_4.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> Page 4 </span></a>
+            <a href="Pages/page_5.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> Page 5 </span></a>
+            <a href="Pages/page_6.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> Page 6 </span></a>
+            <a href="Pages/page_7.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> Page 7 </span></a>
+            <a href="Pages/page_8.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> Page 8 </span></a>
+			<a href="Pages/page_9.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> Page 9 </span></a>
 		</TD>
 	</TR>
     <!-- ***Menu 7*** -->
@@ -929,6 +932,7 @@
 				<SPAN LANG="en-GB">
 					Mukund R. Patel
 				</SPAN>
+				&mdash;
 				<SPAN LANG="en-GB">
 				  	<I>
 						Wind and Solar Power Systems Design, Analysis and Operation Second Edition
@@ -987,6 +991,60 @@
 					<SPAN STYLE="text-decoration: none">
 						<SPAN LANG="en-US">
 							https://app.diagrams.net/
+						</SPAN>
+					</SPAN>
+				</A>
+			</P>
+			<P STYLE="margin-bottom: 0.5cm">
+				<A NAME="_Ref5">
+				</A>
+				<SPAN LANG="en-US">
+					[5]
+				</SPAN>
+	  			<SPAN LANG="en-US">
+					Datasheet Atmega 128;
+  				</SPAN>
+				<!-- <embed	src="https://drive.google.com/file/d/1KPEKnF4J-fjG6dQ2Y7R2Xjqz8o8PnUwU/view?usp=sharing" type="application/pdf" frameBorder="0" scrolling="auto" height="100%" width="100%"></embed> -->
+				<A HREF="https://drive.google.com/file/d/1KPEKnF4J-fjG6dQ2Y7R2Xjqz8o8PnUwU/view?usp=sharing" target="_blank">
+					<SPAN STYLE="text-decoration: none">
+						<SPAN LANG="en-US">
+							Micro-controlador Atmega128
+						</SPAN>
+					</SPAN>
+				</A>
+			</P>
+			<P STYLE="margin-bottom: 0.5cm">
+				<A NAME="_Ref6">
+				</A>
+				<SPAN LANG="en-US">
+					[6]
+				</SPAN>
+	  			<SPAN LANG="en-US">
+					Datasheet PCF8563;
+  				</SPAN>
+				<!-- <embed	src="https://drive.google.com/file/d/1kNUhLnPjzuBvvHeEddS8pxQpXWmrj9dW/view?usp=sharing" type="application/pdf" frameBorder="0" scrolling="auto" height="100%" width="100%"></embed> -->
+				<A HREF="https://drive.google.com/file/d/1kNUhLnPjzuBvvHeEddS8pxQpXWmrj9dW/view?usp=sharing" target="_blank">
+					<SPAN STYLE="text-decoration: none">
+						<SPAN LANG="en-US">
+							RTC (Real Time Clock)
+						</SPAN>
+					</SPAN>
+				</A>
+			</P>
+			<P STYLE="margin-bottom: 0.5cm">
+				<A NAME="_Ref7">
+				</A>
+				<SPAN LANG="en-US">
+					[7]
+				</SPAN>
+	  			<SPAN LANG="en-US">
+					Datasheet INA128;
+  				</SPAN>
+				<!-- <embed	src="https://drive.google.com/file/d/11SjXBlMGSuONgVlr12jhFOHGfcWbJYRh/view?usp=sharing" type="application/pdf" frameBorder="0" scrolling="auto" height="100%" width="100%"></embed> -->
+				<A HREF="https://drive.google.com/file/d/11SjXBlMGSuONgVlr12jhFOHGfcWbJYRh/view?usp=sharing" target="_blank">
+					<SPAN STYLE="text-decoration: none">
+						<SPAN LANG="en-US">
+							Amplificador de Instrumentacao
 						</SPAN>
 					</SPAN>
 				</A>
@@ -1110,7 +1168,7 @@
 <P ALIGN=CENTER>
 	<BR>
 	<span>
-		congratiolations this is the end of &ndsp &ndsp FILE 
+		congratiolations this is the end of &ndsp &ndsp; FILE 
 	</span>
 	<BR>
 </P>
