--- a/Relatorio_2/LabsisWebPage/Pages/page_3.html
+++ b/Relatorio_2/LabsisWebPage/Pages/page_3.html
@@ -7,7 +7,9 @@
 </title>
 </head>
 <body>
-<h1>Page 3</h1>
+<h1>
+  Page 3
+</h1>
 <a href="../index.html"><h2>Home</h2></a>
 <hr/>
 <video src="file://localhost/C:\Users\sergi\Videos\LABSIS_REPORT\video\Bob_Marley_1.mp4" controls width="300">
