--- a/Relatorio_2/LabsisWebPage/Pages/page_6.html
+++ b/Relatorio_2/LabsisWebPage/Pages/page_6.html
@@ -12,26 +12,26 @@
 </h1>
 <a href="../index.html"><h2>Home</h2></a>
 <hr/>
-<span>
+<span style="color:rgb(20, 20, 231);margin-right:1.25em; display:inline-block;">
   span 1
 </span>
-<span>
+<span style="color:green;margin-right:1.25em; display:inline-block;">
   span 2
 </span>
-<span>
+<span style="color:green;margin-right:1.25em; display:inline-block;">
   span 3
 </span>
 <hr/>
-<div>
+<div style="color:green;margin-right:1.25em; display:inline-block;">
   div 1
   ghghgh
   hjhj
   hjhj
 </div>
-<div>
+<div style="color:purple;margin-right:5em; display:inline-block;">
   div 2
 </div>
-<div>
+<div style="color:green;margin-right:1.25em; display:inline-block;">
   div 3
 </div>
 </body>
