--- a/Relatorio_2/LabsisWebPage/modelo/Pages/page_2.html
+++ b/Relatorio_2/LabsisWebPage/modelo/Pages/page_2.html
@@ -7,10 +7,17 @@
 </title>
 </head>
 <body>
-<h1>Page 2</h1>
+<h1>
+  Page 2
+</h1>
 <a href="../index.html"><h2>Home</h2></a>
 <hr/>
 <img src="https://i.insider.com/5d8cdcdb2e22af02db6a2b7f?width=1100&format=jpeg&auto=webp" height="500" alt="Not Found">
 <img src="../image/hardware/DevBoard_2.jpg" alt="Not Found">
+<HR/>
+<MATH>&int;_a_^b^{f(x)<over>1+x} dx</MATH>
+<HR/>
+<math class=chem> Fe_2_^2+^Cr_2_O_4_</math>
+<HR/>
 </body>
 </html>
