--- a/Relatorio_2/LabsisWebPage/modelo/Pages/page_4.html
+++ b/Relatorio_2/LabsisWebPage/modelo/Pages/page_4.html
@@ -7,7 +7,9 @@
 </title>
 </head>
 <body>
-<h1>Page 4</h1>
+<h1>
+  Page 4
+</h1>
 <a href="../index.html"><h2>Home</h2></a>
 <hr/>
 <video src="file://localhost/C:\Users\sergi\Videos\LABSIS_REPORT\video\AC_DC_1.mp4" loop controls width="450">
