--- a/Relatorio_2/LabsisWebPage/modelo/index.html
+++ b/Relatorio_2/LabsisWebPage/modelo/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<HTML>
+<HTML lang="pt" xml:lang="pt" xmlns="http://www.w3.org/1999/xhtml">
 <!-- PREAMBLE -->
 <HEAD>
 <!-- charset reset -->
@@ -157,7 +157,7 @@
 									<B>
 										<FONT COLOR="#ffffff">
 											<FONT SIZE=3>
-												Sergio Santos
+												Sérgio Santos
 												<BR/>
 												<BR/>
 												N&ordm;  1020881
@@ -691,10 +691,7 @@
 				</A>
 				<BR/>
 			</P>
-			<P ALIGN=LEFT STYLE="margin-bottom: 0.51cm">
-			  	<BR/>
-				<B>Fluxograma:</B>
-				<BR/>
+			<section> <h2><b>Fluxograma</b></h2>
 				<BR/>
 				<TABLE WIDTH=100% BORDER=0 CELLPADDING=0 CELLSPACING=0 STYLE="page-break-before: always">
 					<TR>
@@ -708,8 +705,7 @@
 						</TD>
 					</TR>
 				</TABLE>
-				<BR/>
-			</P>
+			</section>
 			<P ALIGN=LEFT STYLE="margin-bottom: 0.51cm">
 			  	<BR/>
 				<BR/>
@@ -1167,9 +1163,6 @@
 </P>
 <P ALIGN=CENTER>
 	<BR>
-	<span>
-		congratiolations this is the end of &ndsp &ndsp; FILE 
-	</span>
 	<BR>
 </P>
 </footer>
